# aptos-move-analyzer

./: .gitignore  Cargo.toml  README.md
editors/: CHANGELOG.md
editors/code/: README.md  package-lock.json  package.json  tsconfig.json
editors/code/src/: configuration.ts  context.ts  main.ts
src/: completion.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lib.rs  move_generate_spec.rs  move_generate_spec_file.rs  move_generate_spec_utils.rs  movefmt.rs  multiproject.rs  project_manager.rs  references.rs  utils.rs
tests/: test_document_symbols.rs
tests/symbols/: Move.toml
tests/symbols/sources/: M1.move  receiver_style_call.move  receiver_style_call2.move  receiver_style_call3.move
