[package]
name = "aptos-move-analyzer"
version = "1.0.0"
authors = ["BitsLab/MoveBit"]
description = "A language server for Move"
repository = "https://github.com/movebit/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
dirs-next = "2.0.0"
once_cell = "1.7.2"
cfg-if = "1.0.0"
wait-timeout = "0.2.0"
regex = "1.5.5"
bisection = "0.1.0"
codespan = "0.11.1"
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.2"
im = "15.1.0"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
petgraph = "0.5.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
url = "2.2.2"
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8"
move-model = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-model" }
move-command-line-common = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-compiler" }
move-ir-types = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-ir-types" }
move-package = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-package" }
move-symbol-pool = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-symbol-pool" }
move-core-types = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-core-types" }
move-cli = { git = "https://github.com/movebit/aptos-core.git", branch = "improve-move-model", package = "move-cli" }
movefmt = { git = "https://github.com/movebit/movefmt.git", branch = "develop" }
commentfmt = { git = "https://github.com/movebit/movefmt.git", branch = "develop", package = "commentfmt" }
itertools = "0.10.0"
walkdir = "2"
log = "0.4.14"
stderrlog = "0.5.4"
enum-iterator = "1.2.0"
num-bigint = "0.4.0"
home = "0.5.3"

[target.'cfg(not(target_os= "windows"))'.dependencies]
pprof = { version = "0.11.0" , features = ["flamegraph" , "protobuf"]}

[features]
aptos = []
sui = []
pprof = []
